Fri Aug  7 01:49:41 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.c: The ULL suffix is not supported by
	  pre-C99 compilers, so resurrect the ULL() macro to regain
	  portability. [ruby-dev:39032]

Fri Aug  7 01:35:26 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/*/extconf.rb: inttypes.h and unistd.h need not be
	  checked here. [ruby-dev:39032]

Thu Aug  6 21:18:15 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/lib/sha2.rb: should require sha2.so.

Thu Aug  6 21:11:40 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/digest/sha2/sha2.c (*_Final): typos.

Thu Aug  6 19:46:56 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.h (BYTE_ORDER): Define BYTE_ORDER as
	  necessary. [ruby-dev:39029]

Thu Aug  6 01:37:20 2009  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/sha2/sha2.[ch]: Update to 1.0 RELEASE which fixes an
	  off-by-one bug in SHA-256 hashing.  Reduce differences from
	  the original while at it. [Bug #1799]

Thu Aug  6 16:25:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_capable, rb_enc_get_index): Symbol is encoding
	  capable.

	* encoding.c (rb_enc_associate_index): cannot set encoding on
	  special constants.

Wed Aug  5 19:11:01 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ruby.c (rb_stdio_set_default_encoding): declared.

Wed Aug  5 18:46:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* debug.c (ruby_dummy_gdb_enums): made public.  [ruby-dev:39001]

Wed Aug  5 12:39:23 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_longjmp): reset raised flag before fatal error.

	* eval_error.c (error_print): file can be NULL. line can be 0.

Wed Aug  5 01:38:27 2009  Yusuke Endoh  <mame@tsg.ne.jp>
 
	* lib/pp.rb (guard_inspect_key): untrust internal hash to prevent
	  unexpected SecurityError.

	* test/ruby/test_object.rb: add a test for [ruby-dev:38982].

Tue Aug  4 22:10:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>
