@@ -1,3 +1,12 @@
+Fri Aug  7 03:22:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_exc_raise, rb_exc_fatal): nil is used to reraise.
+
+Wed Aug  5 12:54:00 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_exc_raise, rb_exc_fatal): require exception object.
+	  [ruby-core:24767]
+
 Fri Aug  7 01:49:41 2009  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/digest/sha2/sha2.c: The ULL suffix is not supported by
